feat(ui): add banking-style confirmation & failure modal for transfers 🧾✨
Introduce a centered modal layer to simulate real mobile money UX:
users now confirm recipient before funds move.

### Added
- Confirmation modal before executing transfers 🟢
- Failure modal for rejected routed transactions ❌
- Pending action handler to defer execution safely
- Reusable modal for both Flow and Fix simulator

### Updated Flow Behaviour
Before:
Send → immediate execution

Now:
Send → confirm recipient → execute

### Updated Fix Simulator Behaviour
- Broken mode → executes after confirmation 👻
- Reroute mode → executes after confirmation 🔁
- Reject mode → shows failure modal 🚫

### Backend
- Serve frontend files directly from FastAPI root (no static folder)
- Added .gitignore for db/cache artifacts

### UX Improvements
- Background blur during decision state
- Banking-style transaction acknowledgement
- Consistent rejection feedback

This improves realism of payment interaction
and highlights how users trust confirmation screens
even when routing is incorrect.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <br />
                 <br />
 
-                <label>Phone</label> <input id="number" value="0241234567" max="10" />
+                <label>Phone</label> <input id="number" value="0241000000" max="10" />
                 <br />
                 <label>Amount</label> <input id="amount" value="200" />
 
@@ -118,7 +118,7 @@
                 </select>
                 <br />
                 <label>Phone</label>
-                <input id="f_number" value="0241234567" max="10" /><br />
+                <input id="f_number" value="0241000000" max="10" /><br />
                 <label>Amount</label>
                 <input id="f_amount" value="200" />
                 <button onclick="runFix()">Send</button>
@@ -171,7 +171,17 @@
 
 
     </div>
+    <div id="confirmModal" class="modal hidden">
+        <div class="modalCard">
+            <h3 id="modalTitle">Confirm Recipient</h3>
+            <p id="modalMessage">Account Name: John Doe</p>
 
+            <div class="modalActions">
+                <button id="confirmBtn">Confirm</button>
+                <button id="closeBtn" class="hidden">Close</button>
+            </div>
+        </div>
+    </div>
     <script src="app.js" type="text/javascript"></script>
 
 </body>
