--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
         </div>
 
-        <div class="log" id="surveyLog"></div>
+        <div id="surveyLog"></div>
 
 
     </div>
@@ -182,6 +182,7 @@
             </div>
         </div>
     </div>
+    <script src="api.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
 
 </body>
